@@ -1,3 +1,8 @@
+2009-01-26  Naohiro Aota  <naota@elisp.net>
+
+	* w3m.el (w3m-content-type-alist): Add "application/x-pdf" content
+	type.
+
 2009-01-21  Kevin Ryde  <user42@zip.com.au>
 
 	* w3m.el (w3m-search-name-anchor): Return true meaning "found" if
